# kinocast

./: .gitignore  Cargo.toml  devenv.nix  metadata.json  push.sh  rustfmt.toml
kinocast/: Cargo.toml  build.rs
kinocast/src/: db.rs  hub.rs  icon  keys.rs  lib.rs  post.rs  proxy.rs  sur.rs  types.rs
kinocast/src/protos/: gossip.rs  hub_event.rs  hub_state.rs  job.rs  message.rs  mod.rs  onchain_event.rs  request_response.rs  rpc.rs  sync_trie.rs
pkg/: manifest.json  scripts.json
runner/: Cargo.toml
runner/src/: lib.rs
ui/: README.md  index.html  manifest.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  NewRouter.tsx  index.css
ui/src/center/: DMs.tsx  Following.tsx  Home.tsx  Thread.tsx  Timeline.tsx
ui/src/components/: Feed.tsx  Modal.tsx  Post.tsx  PostLoader.tsx  feed.css
ui/src/left/: Navbar.tsx
ui/src/logic/: constants.ts  frames.ts  helpers.ts  router.tsx  signatures.ts  theme.ts  theme.tsx
ui/src/logic/chain/: app.ts  clients.ts  fname.ts  ids.ts  keys.ts
ui/src/logic/fetch/: comp.ts  hub.ts  kinode.ts  kinohub.ts  post.ts  warpcast.ts
ui/src/logic/state/: state.ts
ui/src/logic/types/: farcaster.ts  sortug.ts
ui/src/modals/: Composer.tsx  Login.tsx  modals.css
