[package]
name = "kinocast"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
blake3 = "1.5.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
# ethers = { version = "0.5", features = ["full"] }
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.7.1" }
rand = "0.8.5"
rmp-serde = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"
wit-bindgen = "0.24.0"
protobuf = "2.25.2"
hex = "0.4.3"
sha2 = "0.10.8"
chrono = {version = "0.4.34", features =["serde"] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
protobuf-codegen-pure = "2.25.2"


[package.metadata.component]
package = "kinode:process"
